cert-manager/hello-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deploy
  namespace: my-app
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello-container
          image: hashicorp/http-echo
          args:
            - "-text=Hello"
---
kind: Service
apiVersion: v1
metadata:
  name: hello-service
  namespace: my-app
spec:
  selector:
    app: hello
  ports:
    - port: 5678
