cert-manager/secure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: my-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - donaph.ddns.net
    secretName: my-app-tls
  rules:
  - host: donaph.ddns.net
    http:
      paths:
        - path: /hello(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: hello-service
              port: 
                number: 5678
        - path: /welcome(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: welcome-service
              port: 
                number: 5678
